# common-tones

./: .gitignore  CMakeCache.txt  CMakeLists.txt  COPYING  COPYING.MD  Doxyfile  LICENSE  Makefile  README.md  all.lisp  audinfo.c  butterworth.cl  clm-loop.lisp  clm-test.lisp  clm.asd  clm1.lisp  clm2xen.c  clm3.lisp  cm-clm.lisp  cmake_install.cmake  cmus.c  common-tones.asd  common-tones.lisp  config.status  configure  constants.lisp  defaults.lisp  defins.lisp  dlocsig.lisp  doxygen_filter.sh  env.lisp  export.lisp  ffi.lisp  fyow.snd  generics.lisp  i.clm  initmus.lisp  legacy.lisp  libclm.def  mus-config.h  (+14 more)
common-tones/: COPYING.MD  COPYING2.MD  HISTORY.clm  NEWS  README.clm  README.md  acl.cl  add.ins  anoi.ins  audio.c  bandedwg.ins  cellon.ins  circular-scanned.ins  clm-package.lisp  clm.pch  clm1.lisp  cmus.h  config.windoze  configure.ac  defins.lisp  export.lisp  ffi.lisp  files  fmex.ins  granular.ins  initmus.lisp  insect.ins  jcvoi.ins  lbjPiano.ins  lw-all.lisp  make-clm.cl  mcl-doubles.lisp  nrev.ins  old-mac-audio.c  oldmacdonald.lisp  one-cut.ins  panning.lsp  piano.ins  prc-toolkit95.lisp  pvoc-original.ins  (+17 more)
common-tones/EXAMPLES/: addflt.ins  addsnd.ins  arith2.ins  autoc.ins  backandforth.ins  bell.ins  bird.ins  bowl.ins  canter.ins  cnv.ins  fltsnd.ins  freeverb.ins  fullmix.ins  grani.ins  jcrevf.ins  jlrev.ins  kiprev.ins  leslie.ins  maxf.ins  move-sound.ins  noise.ins  pluck.ins  pqwvox.ins  reson.ins  rmsenv.ins  sndwarp.ins  stochastic.ins  tnot.ins  ug.ins  ug1.ins  ug2.ins  ug3.ins  ug4.ins  vox.ins  vslf.ins  wavetrain.ins
common-tones/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
common-tones/docs/: butterworth.html  clm.html
common-tones/examples/: balance.cl  bird.clm  cream.clm
datasets/: scales.cl
docs/: COPYING.MD  README.md  REFERENCES.md  balance.html  cl-fm.html
examples/: README.clm  arith.ins  arith1.ins  badd.ins  bigbird.ins  btest.ins  clm-example.lisp  dlocsig.lisp  drone.ins  expandn.ins  fade.ins  filter-noise.ins  fltnoi.ins  flute.ins  fmtest.ins  grapheq.ins  green.cl  index.cl  jcrev.ins  maraca.ins  mlbvoi.ins  moog.lisp  oldmacdonald.lisp  pqw.ins  pvoc.ins  resflt.ins  san.ins  scentroid.ins  singer.clm  singer.ins  spectr.clm  strad.ins  tb.ins  time.cl  track-rms.ins  trp.ins  ugex.ins  vowel.ins  vsum.ins  zipper.ins
generators/: all-pass.lisp  comb-filter.lisp  convolve.lisp  delay.lisp  env.lisp  file-to-frample.lisp  file-to-sample.lisp  filter.lisp  filtered-comb.lisp  fir-filter.lisp  formant.lisp  frample-to-file.lisp  generators.lisp  granulate.lisp  locsig.lisp  modulation.lisp  move-sound.lisp  moving-average.lisp  ncos.lisp  nrxycos.lisp  nrxysin.lisp  nsin.lisp  one-pole.lisp  one-zero.lisp  oscil.lisp  phase-vocoder.lisp  pulse-train.lisp  rand.lisp  readin.lisp  sample-to-file.lisp  sr-conversion.lisp  ssb-am.lisp  table-lookup.lisp  two-pole.lisp  two-zero.lisp  wave-train.lisp  waves.lisp  waveshaping.lisp
headers/: _sndlib.h  clm-strings.h  clm.h  clm2xen.h  cmus.h  mus-config.h  sndlib-strings.h  sndlib.h  sndlib2xen.h  vct.h  xen.h
plugins/: add-and-cut.lisp  db-to-linear.lisp  dur-gliss.lisp  fft-mag-and-phase.lisp  gliss-dur.lisp  hey.lisp  load-ins.lisp  plugins.lisp  remote-play.lisp  rmix.lisp  sf-ssf.lisp  useful.md  with-instruments.lisp
src/: audinfo.c  clm.c  clm2xen.c  cmus.c  headers.c  io.c  shell.c  sndinfo.c  sndlib2xen.c  sndplay.c  sndrecord.c  sound.c  vct.c  xen.c
unit-tests/: clm-test.lisp  ffi-test.lisp  pistol.snd
utils/: add-and-cut.lisp  db-to-linear.lisp  dur-gliss.lisp  fft-mag-and-phase.lisp  gliss-dur.lisp  hey.lisp  load-ins.lisp  remote-play.lisp  rmix.lisp  sf-ssf.lisp  with-instruments.lisp
